--- a/src/assets/landing/css/main.css
+++ b/src/assets/landing/css/main.css
@@ -544,167 +544,56 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-@font-face {
-  font-family: Town;
-
-  src: url(../../../assets/landing/fonts/town10.ttf);
-}
-
-.landing-wrapper {
-  height: 100%;
-}
-
-.tw-wrapper {
+.tw-container {
   width: 100%;
 }
 
 @media (min-width: 320px) {
-  .tw-wrapper {
+  .tw-container {
     max-width: 320px;
   }
 }
 
 @media (min-width: 375px) {
-  .tw-wrapper {
+  .tw-container {
     max-width: 375px;
   }
 }
 
 @media (min-width: 640px) {
-  .tw-wrapper {
+  .tw-container {
     max-width: 640px;
   }
 }
 
 @media (min-width: 768px) {
-  .tw-wrapper {
+  .tw-container {
     max-width: 768px;
   }
 }
 
 @media (min-width: 1024px) {
-  .tw-wrapper {
+  .tw-container {
     max-width: 1024px;
   }
 }
 
 @media (min-width: 1280px) {
-  .tw-wrapper {
+  .tw-container {
     max-width: 1280px;
   }
 }
 
 @media (min-width: 1536px) {
-  .tw-wrapper {
+  .tw-container {
     max-width: 1536px;
   }
 }
 
 @media (min-width: 1600px) {
-  .tw-wrapper {
+  .tw-container {
     max-width: 1600px;
   }
-}
-
-.tw-wrapper {
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-}
-
-.tw-statistics-card {
-  /* background-color: #ffffff; */
-  border: 2px solid;
-  display: flex;
-  height: 220px;
-  flex-direction: column;
-  justify-content: space-between;
-  border-radius: 10px
-}
-
-.tw-statistics-bg {
-  background-repeat: no-repeat;
-  background-position-y: center;
-  background-position-x: left;
-  background-size: 180px;
-  position: absolute;
-  left: 50%;
-  height: 100%;
-  width: 100%;
-  opacity: 0.08
-}
-
-.video-header {
-  position: absolute;
-  text-align: center;
-  width: 100vw;
-  height: 100vh;
-}
-
-.video-header, .video-header video, .video-header .viewport-header {
-  width: 100%;
-  height: 90vh;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.video-header video {
-  /* background: brown; */
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.video-header .viewport-header {
-  display: flex;
-  /* align-items: center; */
-  justify-content: center;
-  opacity: 1;
-  transform: 1;
-}
-
-.splide {
-  padding: 0px !important;
-}
-
-.splide__pagination {
-  /* background-color: #007E7E!important; */
-  position: absolute!important;
-  bottom: -80px!important;
-}
-
-.splide__pagination__page.is-active {
-  background: #007E7E!important;
-  z-index: 1;
-}
-
-.splide__pagination__page {
-  background-color: #007e7e95!important;
-  padding: 7px!important;
-  border-radius: 50%!important;
-  width: 14px!important;
-}
-
-@media only screen and (max-width: 600px) {
-  .splide__arrow.splide__arrow--next{
-    width: 1.5rem;
-  }
-
-  .splide__arrow.splide__arrow--prev{
-    width: 1.5rem;
-  }
-}
-
-/* START OF TAILWIND BS RESET */
-
-img, video {
-  max-width: 100%;
-  height: revert-layer;
-}
-
-img, svg, video, canvas, audio, iframe, embed, object {
-  display: revert-layer;
-  vertical-align:  revert-layer;
 }
 
 /* END OF TAILWIND BS RESET */
