--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,18 +1,31 @@
 @import 'custom-variables';
 @import 'custom-bootstrap.scss';
 
+@font-face {
+  font-family: Marcellus;
+  src: url(../font/Marcellus-Regular.ttf);
+}
+
 * {
 	padding: 0;
 	margin: 0;
 }
 
 body {
-  background: #000000;
+  background: #0c0c0c;
 	color: #ffffff;
-  font-family: "Montserrat", sans-serif;
+  font-family: Marcellus;
   font-size: 18px;
   -ms-touch-action: none;
   touch-action: none;
   position: relative;
   touch-action: none;
+}
+
+.menu-btn {
+  color: #ffffff;
+  &:hover {
+    color: #0c0c0c;
+    background-color: #ffffff;
+  }
 }
